# k230-pcb-yolov8n

./: CMakeLists.txt  README.md  TROUBLESHOOTING.md  build.sh  main.cc  yolov8n_pcb.cc  yolov8n_pcb.cc.txt  yolov8n_pcb.h  yolov8n_pcb.h.txt
.github/workflows/: build.yml
